fix(ui): colors: ensure sufficients contrast/readability

--- a/app/styles.less
+++ b/app/styles.less
@@ -51,6 +51,11 @@
 
 // bootstrap vars
 // @body-bg: lightyellow;
+@brand-primary: darken(#428bca, 8%);
+@brand-success: darken(#5cb85c, 16%);
+// @brand-info:            #5bc0de;
+// @brand-warning:         #f0ad4e;
+@brand-danger: darken(#d9534f, 5%); 
 @pre-bg: @body-bg;
 @input-bg: @body-bg;
 @panel-bg: @body-bg;
